// ============================================================
// GENERATED FILE - DO NOT EDIT
// ============================================================
// This file is automatically generated from YAML schemas.
// Source: engine/config/schemas/*.yaml
// Generated: 2026-02-03 09:13:48
// Target: web
//
// To modify the schema:
// 1. Edit the YAML files in engine/config/schemas/
// 2. Run: python -m engine.schema.generate
// 3. Run: prisma migrate dev
// ============================================================

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Entity {
  id           String     @id @default(cuid())
  entity_name  String
  entity_class String
  slug         String     @unique
  summary      String?
  attributes   String?
  description  String?
  raw_categories String[]   @default([])
  canonical_activities String[]   @default([])
  canonical_roles String[]   @default([])
  canonical_place_types String[]   @default([])
  canonical_access String[]   @default([])
  discovered_attributes Json
  modules      Json
  street_address String?
  city         String?
  postcode     String?
  country      String?
  latitude     Float?
  longitude    Float?
  phone        String?
  email        String?
  website_url  String?
  instagram_url String?
  facebook_url String?
  twitter_url  String?
  linkedin_url String?
  mainImage     String?
  opening_hours Json
  source_info  Json
  field_confidence Json
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
  external_ids Json
  outgoingRelationships EntityRelationship[] @relation("SourceEntity")
  incomingRelationships EntityRelationship[] @relation("TargetEntity")
  lensMemberships LensEntity[]

  @@index([entity_name])
  @@index([entity_class])
  @@index([city])
  @@index([postcode])
  @@index([latitude, longitude])
  @@index([createdAt])
  @@index([updatedAt])
}

model EntityRelationship {
  id             String  @id @default(cuid())
  sourceEntityId String
  targetEntityId String
  type           String  // e.g., "teaches_at", "plays_at", "part_of"
  confidence     Float?  // Optional confidence score (0.0 - 1.0)
  source         String  // Which connector/source discovered this relationship

  sourceEntity Entity @relation("SourceEntity", fields: [sourceEntityId], references: [id], onDelete: Cascade)
  targetEntity Entity @relation("TargetEntity", fields: [targetEntityId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([sourceEntityId])
  @@index([targetEntityId])
  @@index([type])
}

model ExtractedEntity {
  id                    String   @id @default(cuid())
  raw_ingestion_id      String
  source                String
  entity_class          String
  attributes            String?
  discovered_attributes String?
  external_ids          String?
  extraction_hash       String?
  model_used            String?

  raw_ingestion RawIngestion @relation(fields: [raw_ingestion_id], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([raw_ingestion_id])
  @@index([source])
  @@index([entity_class])
  @@index([extraction_hash])
  @@index([source, entity_class])
  @@index([createdAt])
}

model FailedExtraction {
  id               String   @id @default(cuid())
  raw_ingestion_id String
  source           String
  error_message    String
  error_details    String?
  retry_count      Int      @default(0)
  last_attempt_at  DateTime?

  raw_ingestion RawIngestion @relation(fields: [raw_ingestion_id], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([raw_ingestion_id])
  @@index([source])
  @@index([retry_count])
  @@index([last_attempt_at])
  @@index([retry_count, last_attempt_at])
}

model MergeConflict {
  id                 String   @id @default(cuid())
  field_name         String
  conflicting_values String
  winner_source      String
  winner_value       String
  trust_difference   Int
  severity           Float
  entity_id          String?
  resolved           Boolean  @default(false)
  resolution_notes   String?
  createdAt          DateTime @default(now())
  updatedAt          DateTime @updatedAt

  @@index([field_name])
  @@index([winner_source])
  @@index([severity])
  @@index([resolved])
  @@index([entity_id])
}

model LensEntity {
  lensId    String
  entityId  String
  entity    Entity   @relation(fields: [entityId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())

  @@id([lensId, entityId])
  @@index([lensId])
  @@index([entityId])
}

model OrchestrationRun {
  id                String   @id @default(cuid())
  query             String   // Original user query
  ingestion_mode    String   // e.g., "discover_many", "verify_one"
  status            String   // e.g., "in_progress", "completed", "failed"
  candidates_found  Int      @default(0)
  accepted_entities Int      @default(0)
  budget_spent_usd  Float?   @default(0.0)
  metadata_json     String?  // Additional metadata stored as JSON

  raw_ingestions RawIngestion[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([query])
  @@index([status])
  @@index([createdAt])
}

model RawIngestion {
  id                    String   @id @default(cuid())
  source                String   // e.g., "serper", "google_places", "osm"
  source_url            String   // Original URL or query that generated this data
  file_path             String   // Path to raw JSON file: engine/data/raw/<source>/<timestamp>_<id>.json
  status                String   // e.g., "success", "failed", "pending"
  ingested_at           DateTime @default(now())
  hash                  String   // Content hash for deduplication
  metadata_json         String?  // Additional metadata stored as JSON
  orchestration_run_id  String?  // Link to parent OrchestrationRun (nullable for backward compatibility)

  orchestration_run OrchestrationRun? @relation(fields: [orchestration_run_id], references: [id], onDelete: SetNull)
  extractedEntities ExtractedEntity[]
  failedExtractions FailedExtraction[]

  @@index([source])
  @@index([status])
  @@index([hash])
  @@index([ingested_at])
  @@index([orchestration_run_id])
  @@index([source, status])
  @@index([status, ingested_at])
}

model ConnectorUsage {
  id             String   @id @default(cuid())
  connector_name String
  date           DateTime @db.Date
  request_count  Int      @default(0)
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  @@unique([connector_name, date])
  @@index([connector_name])
  @@index([date])
}
